<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealImpact</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_first_login">FirstLogin</string>
    <string name="login_title">Sign-in</string>
    <string name="please_wait">Please wait....</string>
    <string name="title_activity_message_details">Message Details</string>
    <string name="action_back">Back</string>
    <string name="login_label">LOGIN</string>
    <string name="pass_label">PASS</string>
    <string name="first_connection">FIRST CONNECTION</string>
    <string name="from">from:</string>
    <string name="title_activity_task_details">Task Details</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_about">About</string>
    <string name="server_address">Server address</string>
    <string name="user_name">User name</string>
    <string name="organization">Organization</string>
    <string name="lst_refresh">Last refresh</string>
    <string name="application_version">Application version</string>
    <string name="app_version">1.5</string>
    <string name="ok">Ok</string>
    <string name="networking">Network</string>
    <string name="no_net_connection">No data connection!</string>
    <string name="refresh_ack">Refresh successfull!</string>
    <string name="refresh_nack">Refresh failed!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">POI Map</string>
    <string name="title_activity_poi_details">Map</string>
    <string name="title_activity_settings">Settings</string>

    <array name="sortby">
        <item>name</item>
        <item>priority</item>
        <item>distance</item>
        <item>type</item>

    </array>
    <array name="visibility">
        <item>not visible at all</item>
        <item>slightly visible</item>
        <item>visible</item>
        <item>very visible</item>
        <item>hugely visible</item>
    </array>

    <string name="title_activity_poi_surveys">PoiSurveysActivity</string>
    <string name="title_activity_main_survey">MainSurveyActivity</string>
    <string name="title_activity_question_visible">QuestionVisibleActivity</string>
    <string name="title_activity_question_scan">QuestionScanActivity</string>
    <string name="title_activity_question_picture">QuestionPictureActivity</string>
    <string name="title_activity_question_large">QuestionLargeActivity</string>
    <string name="finish_title">Sending data</string>
    <string name="title_activity_new_poi">NewPoiActivity</string>
    <string name="title_activity_new_poi_details">NewPoiDetailsActivity</string>
    <string name="task_decline_title">Task decline request!</string>

</resources>
