<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.cvirn.mobileapp2.survey.login.FirstLoginActivity" >
    <item android:id="@+id/action_refresh"
          android:title="@string/action_refresh"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="200"
          app:showAsAction="never" />
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="300"
          app:showAsAction="never" />
    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:orderInCategory="400"
          app:showAsAction="never" />
</menu>