<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.cvirn.mobileapp2.survey.settings.SettingsActivity"
                android:gravity="top">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="left|center"
                android:background="#e4e1dc"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:id="@+id/linearLayout">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/back"
                    android:id="@+id/imageButton"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Application name:"
                style="@style/AboutLabel"
                android:id="@+id/textView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                style="@style/AboutText"
                android:id="@+id/textMade"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/application_version"
                style="@style/AboutLabel"
                android:id="@+id/textView5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_version"
                style="@style/AboutText"
                android:id="@+id/textView10"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>

